--- a/xentronics-node/package.json
+++ b/xentronics-node/package.json
@@ -4,16 +4,35 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/index.js"
+    "test": "nyc mocha --timeout 10000",
+    "start": "node server/index.js",
+    "lint": "eslint server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
-    "pg": "^8.7.1"
-  }
+    "mocha": "^9.1.3",
+    "pg": "^8.7.1",
+    "prettier": "^2.4.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.25.2",
+    "git-pre-push": "0.0.5",
+    "nyc": "^15.1.0"
+  },
+  "pre-push": [
+    "lint",
+    "test"
+  ]
+  
 }
