Testing more build scripts for Heroku

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "server": "node xentronics-node/server/index.js",
         "client": "npm start --prefix xentronics-react",
         "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "build": "node xentronics-node/server/index.js"
     },
 
     "engines": {
