--- a/heroku/package.json
+++ b/heroku/package.json
@@ -1,17 +1,38 @@
 {
-    "scripts": {
-        "start": "node xentronics-node/server/index.js",
-        "server": "node xentronics-node/server/index.js",
-        "client": "npm start --prefix xentronics-react",
-        "dev": "concurrently \"npm run server\" \"npm run client\"",
-        "build": "node xentronics-node/server/index.js"
-    },
-
-    "engines": {
-        "node": "14.x"
-      },
-    
-    "devDependencies": {
-        "concurrently": "^6.3.0"
-    }
+  "name": "xentronics-node",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "nyc mocha --timeout 10000",
+    "start": "node server/index.js",
+    "lint": "eslint server"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "express": "^4.17.1",
+    "mocha": "^9.1.3",
+    "pg": "^8.7.1",
+    "prettier": "^2.4.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.25.2",
+    "git-pre-push": "0.0.5",
+    "nyc": "^15.1.0"
+  },
+  "pre-push": [
+    "lint",
+    "test"
+  ]
+  
 }
