--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
+    
+    "name": "Xentronics",
+    "version": "0.0.1",
     "scripts": {
-        "start": "node xentronics-node/server/index.js",
-        "server": "node xentronics-node/server/index.js",
-        "client": "npm start --prefix xentronics-react",
-        "dev": "concurrently \"npm run server\" \"npm run client\"",
-        "build": "node xentronics-node/server/index.js"
-    },
-
+            "start": "node xentronics-node/server/index.js",
+            "server": "node xentronics-node/server/index.js",
+            "client": "npm start --prefix xentronics-react",
+            "dev": "concurrently \"npm run server\" \"npm run client\""
+        },
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "chai-http": "^4.3.0",
+        "cors": "^2.8.5",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "express": "^4.17.1",
+        "mocha": "^9.1.3",
+        "pg": "^8.7.1",
+        "prettier": "^2.4.1"
+      },
     "engines": {
-        "node": "14.x"
+        "node": "12.x"
       },
     
     "devDependencies": {
