--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
     "name": "Xentronics",
     "version": "0.0.1",
     "scripts": {
+        "test": "nyc mocha 'xentronics-node/test' --timeout 10000",
         "start": "node xentronics-node/server/index.js",
         "server": "node xentronics-node/server/index.js",
         "client": "npm start --prefix xentronics-react",
-        "dev": "concurrently \"npm run server\" \"npm run client\""
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "lint": "eslint xentronics-node/server"
     },
     "dependencies": {
         "body-parser": "^1.19.0",
@@ -22,6 +24,16 @@
         "node": "12.x"
     },
     "devDependencies": {
-        "concurrently": "^6.3.0"
-    }
+        "concurrently": "^6.3.0",
+        "chai": "^4.3.4",
+        "eslint": "^7.32.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-import": "^2.25.2",
+        "git-pre-push": "0.0.5",
+        "nyc": "^15.1.0"
+    },
+    "pre-push": [
+        "lint",
+        "test"
+    ]
 }
